2009-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Removed as we now use cfunction() from inline (>= 0.3.4)
        * man/{RcppInline,internals}.Rd: idem

	* NAMESPACE: removed entries related to cfunction and methods

	* DESCRIPTION: Added 'Suggests: inline (>= 0.3.4)

	* inst/examples/RcppInline/*R: Add library(inline) or require(inline)

2009-12-27  Romain Francois <francoisromain@free.fr>

	* src/RcppCommon.{h,cpp} : added experimental uncaught exception
	management

	* R/zzz.R : added .onAttach, used to register the uncaught exception
	management on package attach

	* R/exceptions.R : added R side of the exception management, unexported
	as it is only used by internal C++ code

	* inst/examples/RcppInline/UncaughtExceptions.r: demo of the
	uncaught exception system

	* src/RcppSexp.{h,cpp} : added method isNULL to test if the
	underlying SEXP is NULL

	* src/RcppSexp.{h,cpp} : added some methods to deal with attributes
	attributeNames : the names of the attributes as a vector<string>
	hasAttribute   : test whether the SEXP has the given attribute
	attr           : extract the attribute (might return NULL)

	* src/RcppSexp.{h,cpp} : added RcppSexp(bool), RcppSexp(vector<bool>)
	constructors and RcppSexp.asBool(), RcppSexp.asStdVectorBool() methods

	* inst/examples/RcppInline/RcppSexpTests.r: examples/tests of the
	above items

2009-12-26  Romain Francois <francoisromain@free.fr>

	* src/RcppSexp.{h,cpp} : added std::set<{int,double,Rbyte,string}> as
	accepted input type for the RcppSexp class (needed by RProtoBuf)

	* inst/examples/RcppInline/RcppSexpTests.r: examples/tests of the above

2009-12-21  Romain Francois <francoisromain@free.fr>

	* src/RcppSexp.{h,cpp} : support for raw vector added into RcppSexp

	* inst/examples/RcppInline/RcppSexpTests.r: examples of raw vector
	support

2009-12-20  Dirk Eddelbuettel  <edd@debian.org>

        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: Minor