@@ -15,11 +15,11 @@
 # You should have received a copy of the GNU General Public License
 # along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-uncaught_cpp_exception <- function( message = "uncaught C++ exception" ){
+cpp_exception <- function( message = "C++ exception", class = NULL ){
 	callstack <- sys.calls()
 	ncalls <- length(callstack)
 	call <- if( ncalls > 1L) callstack[[ ncalls - 1L ]] else match.call()
-	classes <- c( "C++Error", "error", "condition" )
+	classes <- c( class, "C++Error", "error", "condition" )
 	condition <- structure( 
 		list( message = message, call = call ), 
 		class = classes )
